fix: fix cards height on firefox and edge mobile

--- a/src/components/Card/theme.scss
+++ b/src/components/Card/theme.scss
@@ -1,6 +1,7 @@
 .card {
 	font-size: 14px;
 	margin: 1em;
+	display: block;
 }
 
 
